namespace SpaceJailRunner.NameManager
{
    internal static class NameManager
    {
        public const string POOL_AMMO = "[Pool_Ammo]";

        public const string VERTICAL_AXIS = "Vertical";
        public const string HORIZONTAL_AXIS = "Horizontal";
        public const string FIRE_BUTTON = "Fire1";

        public const string ANIMATOR_SPEED = "speed";
        public const string ANIMATOR_FIRE = "fire";
        public const string ANIMATOR_IDLE = "idle";
        public const string ANIMATOR_ClOSE_ATTACK = "closeAttack";
    }
}